# printercart_simple

./: CMakeLists.txt  Makefile  README.txt  sdkconfig
components/printcart/: CMakeLists.txt  component.mk  printcart_buffer_filler.c  printcart_buffer_filler.h  printcart_genwaveform.c  printcart_genwaveform.h  printcart_i2s.c  printcart_i2s.h
main/: CMakeLists.txt  component.mk  local_io.c  local_io.h  main.c  picture.rgb  read_picture.c  read_picture.h
tools/: waveform_editor.html
